<resources>
    <string name="app_name">Virtual Kitchen</string>
    <string name="recipes">Recipes</string>
    <string name="favourites">Favourites</string>
    <string name="my_ingredient">Ingredients</string>
    <string name="user_image">user image</string>
    <string name="in_a_mood">My Mood</string>
    <string name="loading">Loading!...</string>

    <string name="facebook_app_id">1733782833613796</string>
    <string name="facebook_app_secret">22d7d9b3550a9bb6bcb6ff2314017805</string>
    <string name="fb_login_protocol_scheme">fb1733782833613796</string>
    <string name="vk_app_key">AkxyCr2apUfGu5FnzLsHTAtt</string>

    <string name="ad_banner_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_fullscreen_unit_id_test2">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_ap_id">ca-app-pub-6094658920545880~4341170159</string>
    <string name="ad_banner_unit_id">ca-app-pub-6094658920545880/3532319666</string>
    <string name="ad_fullscreen_unit_id">ca-app-pub-6094658920545880/8579798066</string>

    <string name="sing_out">Sign Out</string>
    <string name="profile_pick">Profile Pick</string>

    <string name="title_activity_recipes">Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recipe_details">RecipeDetails</string>
    <string name="instructions">Instructions</string>
    <string name="nutrition">Nutrition</string>
    <string name="summary">Summary</string>
    <string name="preparation">Preparation</string>
    <string name="view_ingredient_i_have">View Ingredients I have</string>
    <string name="title">Title</string>
    <string name="title_activity_maps">Map</string>
    <string name="saving_recipe">Saving Recipe</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="search_hint">Type what you want to search</string>
    <string name="cancel">Cancel</string>
    <string name="add_ingredient">Add Ingredients</string>
    <string name="save_ingredient">Save Ingredient</string>
    <string name="remove">Remove</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="confirm_email_address">Confirm email address</string>
    <string name="email_address">Email address</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? register</string>
    <string name="email_hint">123@gmail.com</string>
    <string name="title_activity_additional_info">AdditionalInfo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="additional_info">Please add a password to go with your New Account</string>
    <string name="username">Username</string>
    <string name="username_empty_erro">Please fill out this field</string>
    <string name="password_empty_error">Please enter password</string>
    <string name="full_name_dummy_text">Full Name</string>
    <string name="empty_field_error">Field can\'t be empty</string>
    <string name="username_taken_error">Username is taken, Try another name!</string>
    <string name="fetching_favourite_recipe">Fetching Favourite Recipe!...</string>
    <string name="error_connecting_api">There was an error connecting to API</string>
    <string name="failed_retrieve_items">Failed to retrieve Items</string>
    <string name="on_dummy_text">1</string>
    <string name="quantity">Quantity:</string>
    <string name="display_name">Display Name</string>
    <string name="verify_email">Please verify your email!...</string>
    <string name="register_failed">Register failed!...</string>
    <string name="no_internet_connection">There is no internet connection!...</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="ingredient_icon">ingredient icon</string>
    <string name="recipe_icon">recipe icon</string>
    <string name="zero">0</string>
    <string name="send_verification_email">Send Verification Email</string>
    <string name="veridy_email_title">Verify Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm">Confirm</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agree_terms_and_conditions">I agree to terms and conditions</string>
    <string name="view_terms_and_conditions">View Terms and Conditions</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy_link">https://docs.google.com/document/d/1Y3HXg9bmnJrWTpNonBUxphto5PCe2O5ezlISdaILfCM</string>
    <string name="terms_link">https://docs.google.com/document/d/1xqH7lkmlKYRb_M5m27GBc0u2zGyz7WwcifgH56u7lpw</string>
    <string name="key_display_name">key_display_name</string>
    <string name="key_email">key_email</string>
    <string name="key_keep_me_logged_in">key_keep_me_logged_in</string>
    <string name="key_use_location">key_use_location</string>
    <string name="key_example_list">key_example_list</string>
    <string name="key_old_version">key_old_version</string>
    <string name="view_nearby_stores">View Nearby Stores</string>
    <string name="search">Search</string>
    <string name="profile_text">Profile</string>
    <string name="note_about_this_content">Note about this content</string>
</resources>
