<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_keep_me_logged_in"
            android:summary="Stay logged in and re-authenticate when timed out"
            android:title="Keep Me Logged-In" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_use_location"
            android:summary="Use my location when searching for places"
            android:title="Use My Location" />

    </PreferenceCategory>
    <PreferenceCategory android:title="About">
        <Preference android:title="@string/terms_conditions">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/terms_link" />
        </Preference>
        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/privacy_policy_link" />
        </Preference>
        <Preference
            android:capitalize="words"
            android:defaultValue="1.0.1"
            android:inputType="textCapWords"
            android:key="@string/key_old_version"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="1.0.1b"
            android:title="Version" />
    </PreferenceCategory>

</PreferenceScreen>
