<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cloudappdev.ben.virtualkitchen.activities.RecipeDetails"
    tools:showIn="@layout/activity_recipe_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/com_facebook_button_border_color_focused"
            android:text="@string/title"
            android:textStyle="normal|bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/view_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:text="@string/view_ingredient_i_have"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/instruction_btn" />

            <Button
                android:layout_width="wrap_content"
                android:text="@string/instructions"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:id="@+id/instruction_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/summary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/com_facebook_button_border_color_focused"
            android:text="@string/nutrition"
            android:textStyle="normal|bold" />
        <TextView
            android:id="@+id/nutrition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/summary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/com_facebook_button_border_color_focused"
            android:text="@string/preparation"
            android:textStyle="normal|bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/summary" />
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
