<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ProfilePage"
    tools:showIn="@layout/activity_profile_page"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_head_tab"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile_pick"
            android:elevation="6dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/cart_items"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="1dp"
            app:srcCompat="@mipmap/cart_items" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/profile_img"
            android:padding="5dp"
            android:text="@string/full_name_dummy_text"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="normal|bold" />

        <ImageView
            android:id="@+id/recipe_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignBottom="@+id/profile_img"
            android:layout_alignStart="@+id/name_tv"
            android:contentDescription="@string/recipe_icon"
            app:srcCompat="@mipmap/recipes" />

        <ImageView
            android:id="@+id/ingredient_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignBottom="@+id/profile_img"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/ingredient_icon"
            app:srcCompat="@mipmap/cart_items" />

        <TextView
            android:id="@+id/recipe_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/profile_img"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/recipe_icon"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredient_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/profile_img"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/ingredient_icon"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />


</android.support.constraint.ConstraintLayout>